--- a/components/compStyles/fromclients.module.css
+++ b/components/compStyles/fromclients.module.css
@@ -19,11 +19,6 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.336);
 margin: .5rem;
 border-radius: 5px;
-  background: linear-gradient(
-    to left,
-    rgb(236, 31, 4),
-    rgba(199, 28, 5, 0.377)
-  );
 }
 
 .embla__slide_container {
@@ -32,23 +27,7 @@ border-radius: 5px;
   justify-content: flex-start;
   margin: 0;
   align-items: center;
-}
-
-.carousel_text {
-  font-size: 1rem;
-  height: 70%;
-  width: 45%;
-  margin: auto;
-  justify-content: flex-end;
-}
-
-.carousel_text h2,
-.carousel_text h3 {
-  margin-bottom: 0.5rem;
-}
-
-.carousel_text p {
-  margin-bottom: 2rem;
+  transition: .8s ease-in;
 }
 
 .image {
@@ -57,18 +36,6 @@ border-radius: 5px;
   margin: auto;
 }
 
-.carousel_text1 {
-  justify-content: flex-start;
-  padding: 1rem;
-  font-size: 1rem;
-  min-height: 60vh;
-  width: 100%;
-  height: fit-content;
-  margin: 2em 1em 0;
-  justify-content: flex-start;
-
-  align-items: flex-start;
-}
 
 @media (max-width: 700px) {
   .embla__slide_container {
