--- a/components/compStyles/navigation.module.css
+++ b/components/compStyles/navigation.module.css
@@ -1,15 +1,14 @@
 .navigation {
   color: var(--primary-color);
-
+background-color: rgba(255, 255, 255, 0.945);
   font-size: 0.9rem;
-  
 }
 
 .nav_container {
   padding: 0.7em 0 0.7em 0.5em;
   align-items: center;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 2;
 }
 
 .logo_container {
@@ -55,20 +54,28 @@
 }
 
 @media (max-width: 700px) {
+.navigation {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  padding: .2rem 0;
+}
+
   .links {
     position: fixed;
     display: flex;
     flex-direction: column;
     height: fit-content;
     width: 100%;
-    background-color: var(--complementry-color);
-    top: 3.4rem;
+    background-color: rgba(255, 255, 255, 0.945);;
+    top: 2rem;
     left: 0;
     z-index: 2;
     padding: 0 1rem 1rem;
     transition: 0.9s ease-in-out;
 
-    box-shadow: 0 5px 3px  0 rgba(0, 0, 0, 0.137);
+    box-shadow: 0 5px 4px  0 rgba(0, 0, 0, 0.137);
   }
 
   .nav_link {
